# cpc_mlff

./: pyproject.toml
examples/: train_so3kratACE.py  train_so3krates_shnitsel.py
mlff/cAPI/: mlff_train_so3krates.py
mlff/data/: dataset.py
mlff/mdx/: optimizer.py
mlff/nn/embed/: embed.py
mlff/properties/: __init__.py  properties.py  property_names.py
mlff/sph_ops/: contract.py
tests/test_data/: load.py
