[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "Thorben Frank" },
    { name = "Kevin Höllring", email = "kevin.hoellring@fau.de" },
]
name = "mlff"
version = "0.3.0"
description = "Build Neural Networks for Force Fields with JAX"
readme = { file = "README.md", content-type = "text/markdown" }
license-files = ["LICENSE.md"]
requires-python = ">=3.12"
dependencies = [
    "numpy",
    # "jax == 0.4.8",
    "flax",
    "jaxopt",
    "jraph",
    "optax",
    "orbax-checkpoint == 0.5.23",
    "portpicker",
    # 'tensorflow',
    "scikit-learn",
    "ase",
    "tqdm",
    "wandb",
    "pyyaml",
    "pytest",
    "h5py",
]
keywords = [
    "machine learning",
    "force fields",
    "chemistry",
    "molecular dynamics",
    "MD",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["mlff"]

[tool.setuptools.package-data]
sph_ops = ["cgmatrix.npz", "u_matrix.pickle"]

[project.optional-dependencies]
gui = []
cli = []

[project.scripts]
my-client = "my_package.my_module:main_cli"
evaluate = "mlff.cAPI.mlff_eval:evaluate"
train = "mlff.cAPI.mlff_train:train"
run_md = "mlff.cAPI.mlff_md:run_md"
run_relaxation = "mlff.cAPI.mlff_structure_relaxation:run_relaxation"
analyse_md = "mlff.cAPI.mlff_analyse:analyse_md"
train_so3krates = "mlff.cAPI.mlff_train_so3krates:train_so3krates"
train_so3kratACE = "mlff.cAPI.mlff_train_so3kratace:train_so3kratace"
trajectory_to_xyz = "mlff.cAPI.mlff_postprocessing:trajectory_to_xyz"
to_mlff_input = "mlff.cAPI.mlff_input_processing:to_mlff_input"

[project.urls]
"Homepage" = "https://github.com/thorben-frank/mlff"
"Bug Tracker" = "https://github.com/thorben-frank/mlff/issues"
